--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif&display=swap');
 
 /*body*/
+
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -13,6 +14,7 @@ body {
 }
 
 /*nav*/
+
 .nav {
   display: flex;
   justify-content: space-between;
@@ -22,7 +24,7 @@ body {
   top: 0;
   width: 100%;
   background-color: rgb(63, 93, 123);
-
+  z-index: 1000;
 }
 
 .nav-list {
@@ -52,6 +54,7 @@ body {
 
 main {
   margin-top: 90px;
+  margin-bottom: 30px;
 }
 
 h1 {
@@ -69,7 +72,7 @@ h1 {
   background-color: #BDC3C7;
 }
 
-.index-conteiner {
+.index {
   text-align: center;
 }
 
@@ -79,13 +82,57 @@ h1 {
   padding: 5px;
 }
 
-.index-card {
-  text-align: left;
+.index-contain {
+  text-align: center;
   padding: 30px;
 }
 
-.index-card p {
+.index-contain p {
+  font-weight: bold;
   padding: 5px;
+}
+
+.index-circles {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.top-circles,
+.bottom-circles {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.index-circles-conteiner {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background-color: #3498db;
+  color: black; 
+  font-size: 18px;
+  padding: 20px;
+  margin: 5px;
+  margin-right: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  box-sizing: border-box;
+  flex-direction: column;
+  overflow: hidden;
+  background-color: #D4AF37;
+  border: 2px solid #B7950B;
+}
+
+.index-circles-conteiner span {
+  white-space: nowrap;
+}
+
+.index-conteiner h1, p::selection{
+  background-color: #B7950B;
 }
 
 .wsp {
@@ -142,25 +189,39 @@ h1 {
 }
 
 .pilares-card h3 {
-  margin: 20px;
+  margin: 10px;
+ 
 }
 
 .pilares-card {
   display: flex;
-  flex-wrap: wrap;
-  gap: 15px;
-  justify-content: space-evenly;
+  flex-wrap: nowrap;
+  gap: 20px;
+  justify-content: space-between;
+  align-items: stretch;
+  margin: 20px;
 }
 
 .pilares-card-conteiner {
+  display: flex;
+  flex-direction: column; 
   width: 250px;
-  height: 100%;
+  height: 300px;
   border: 2px solid rgb(235, 244, 185);
   border-radius: 5px;
   background-color: #BDC3C7;
-  padding: 0px 25px 15px 25px;
+  padding: 10px 25px 15px 25px;
   margin: 10px;
   text-align: justify;
+  align-items: center; 
+}
+
+.pilares-card-conteiner p {
+  margin: auto;
+}
+
+.pilares-card-conteiner:hover{
+  background-color: #b3bdec;
 }
 
 /*Servicios*/
@@ -229,9 +290,11 @@ h1 {
 }
 
 .servicios-card-conteiner img {
-  width: 380px;
+  width: 340px;
   height: 200px;
   padding: 20px; 
+  object-fit: cover;
+  overflow: hidden;
 }
 
 .servicios-card-conteiner p {
@@ -239,16 +302,38 @@ h1 {
   font-size: 16px; 
   font-weight: bold;
 }
+
+.servicios-card-conteiner:hover{
+  background-color: #84c6c7;
+  box-shadow: 3px 3px 13px 5px #84a8c7;
+}
+
+.servicios-card-conteiner:nth-child(even){
+    background-color: bisque;
+    flex-direction: column;
+}
+
+.servicios-card-conteiner:nth-child(even){
+  background-color: burlywood;
+}
+
+.servicios-card-conteiner:hover img{
+  filter: blur(0);
+  width: 400px;
+  height: 250px;
+}
+
 /*Promociones*/
 
 .body-promociones {
   background-color: rgb(208, 245, 232);
-  padding: 15px;
 }
 
-.body-promociones img{
+.auto{
   display: block;
   margin: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 .promocion-1 {
@@ -276,7 +361,7 @@ h1 {
 }
 
 .box {
-  width: 250px;
+  width: 280px;
   height: 250px;
   font-weight: bold;
   display: flex;
@@ -325,6 +410,12 @@ h1 {
   border: 1px solid rgba(255, 255, 255, 0.599);
   box-shadow: 2px 2px 6px 2px rgba(255, 235, 205, 0.193);
 }
+
+.box:hover{
+  background-color: rgb(236, 117, 117);
+  box-shadow: 3px 3px 13px 5px #11111129;
+}
+
 /*Contacto*/
 
 .body-contact{
@@ -339,20 +430,51 @@ h1 {
   padding: 10px;
 }
 
-.contact-ubicacion{
+.contact-ubicacion {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 15px;
 }
 
-.contact-ubicacion h3{
-  padding: 10px;
+.contact-info {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.contact-info div {
+  text-align: center;
 }
 
 /*footer*/
 
 footer {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: rgb(63, 93, 123);
   color: #FFFFFF;
-  padding: 10px
+  padding: 8px;
+}
+
+.facebook,
+.instagram,
+.twitter{
+  bottom: 10px;
+  right: 10px;
+  padding-right: 5px;
+}
+
+.facebook{
+  width: 40px;
+  margin-left: 20px;  
+}
+
+.instagram{
+  width: 55px;
+}
+
+.twitter{
+  width: 35px;
 }
