--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,30 @@
-/* Fuente Web de texto - importada de google PT Serif*/
-@import url('https://fonts.googleapis.com/css2?family=PT+Serif&display=swap');
+/* Fuente Web de texto - importada de google*/
 
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@600&family=Kanit:wght@300;400&family=Poppins:ital,wght@0,400;1,300&display=swap');
 /*body*/
 
 body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', 'Tahoma', 'Geneva', 'Verdana', 'sans-serif';
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+}
+
+h1 {
+  text-align: center;
+  font-size: 30px;
+  font-family: 'Fira Sans', serif;
+  font-weight: bolder;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+h2{
+  font-family: 'Poppins';
 }
 
 * {
@@ -13,57 +33,28 @@ body {
   box-sizing: border-box;
 }
 
+p::selection{
+  background-color: #c1ecc1;
+}
+
 /*nav*/
 
-.nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 5px;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background-color: rgb(63, 93, 123);
-  z-index: 1000;
-}
-
-.nav-list {
-  list-style: none;
-  display: flex;
-  padding-right: 20px;
-}
-
-.nav-list li {
-  margin-left: 20px;
-
-}
-
 .nav-link {
-  text-decoration: none;
-  font-size: 16px;
   color: #FFFFFF;
   font-weight: bolder;
-  font-size: 16px;
 }
 
-.nav img {
-  width: 80px;
-  height: auto;
-  margin-left: 15px;
+.navbar-toggler {
+  position: absolute;
+  align-items: center;
+  right: 0;
+  margin-right: 15px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
-main {
-  margin-top: 90px;
-  margin-bottom: 30px;
-}
-
-h1 {
-  text-align: center;
-  font-size: 30px;
-  font-family: PT Serif;
-  font-weight: bolder;
-  padding-top: 10px;
-  padding-bottom: 5px;
+.nav-link:hover {
+  color: #ffcc00;
 }
 
 /*index*/
@@ -74,12 +65,6 @@ h1 {
 
 .index {
   text-align: center;
-}
-
-.car {
-  width: 60%;
-  height: auto;
-  padding: 5px;
 }
 
 .index-contain {
@@ -97,6 +82,7 @@ h1 {
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .top-circles,
@@ -106,11 +92,10 @@ h1 {
   width: 100%;
 }
 
-.index-circles-conteiner {
+.index-circles-container {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  background-color: #3498db;
   color: black; 
   font-size: 18px;
   padding: 20px;
@@ -127,20 +112,8 @@ h1 {
   border: 2px solid #B7950B;
 }
 
-.index-circles-conteiner span {
+.index-circles-container span {
   white-space: nowrap;
-}
-
-.index-conteiner h1, p::selection{
-  background-color: #B7950B;
-}
-
-.wsp {
-  width: 55px;
-  border-radius: 70%;
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
 }
 
 /*Sobre nosotros*/
@@ -174,23 +147,22 @@ h1 {
   
 }
 
-.pilares-conteiner {
+.pilares-container {
   padding: 5px;
 }
 
 .pilares,
-.pilares-conteiner h2,
+.pilares-container h2,
 .pilares-card h3 {
   text-align: center;
 }
 
-.pilares-conteiner h2 {
+.pilares-container h2 {
   padding: 5px;
 }
 
 .pilares-card h3 {
   margin: 10px;
- 
 }
 
 .pilares-card {
@@ -202,7 +174,7 @@ h1 {
   margin: 20px;
 }
 
-.pilares-card-conteiner {
+.pilares-card-container {
   display: flex;
   flex-direction: column; 
   width: 250px;
@@ -216,11 +188,11 @@ h1 {
   align-items: center; 
 }
 
-.pilares-card-conteiner p {
+.pilares-card-container p {
   margin: auto;
 }
 
-.pilares-card-conteiner:hover{
+.pilares-card-container:hover{
   background-color: #b3bdec;
 }
 
@@ -233,28 +205,27 @@ h1 {
   text-align: center;
 }
 
-.servicios-conteiner{
+.servicios-container{
   display: flex;
   margin: 10px;
 }
 
-.servicios-conteiner h2{
+.servicios-container h2{
   margin-top: 10px;
 }
 
-.servicios-conteiner p {
+.servicios-container p {
   padding: 10px;
   text-align: left;
 }
 
-.servicios-conteiner-span{
+.servicios-container-span{
   width: 100%;
-  margin: 0 auto; 
   background-color: #f0f0f0; 
   padding: 20px; 
 }
 
-.servicios-conteiner-span p{
+.servicios-container-span p{
   display: block; 
   text-align: center; 
   font-weight: bold;
@@ -268,7 +239,7 @@ h1 {
   justify-content: space-evenly;
 }
 
-.servicios-card-conteiner {
+.servicios-card-container {
   width: 400px;
   height: 480px;
   border: 2px solid rgb(235, 244, 185);
@@ -283,13 +254,13 @@ h1 {
   justify-content: center; 
 }
 
-.servicios-card-conteiner h2 {
+.servicios-card-container h2 {
   padding: 5px;
   text-align: left;
   margin-bottom: 5px;
 }
 
-.servicios-card-conteiner img {
+.servicios-card-container img {
   width: 340px;
   height: 200px;
   padding: 20px; 
@@ -297,27 +268,27 @@ h1 {
   overflow: hidden;
 }
 
-.servicios-card-conteiner p {
+.servicios-card-container p {
   line-height: 1.5;
   font-size: 16px; 
   font-weight: bold;
 }
 
-.servicios-card-conteiner:hover{
+.servicios-card-container:hover{
   background-color: #84c6c7;
   box-shadow: 3px 3px 13px 5px #84a8c7;
 }
 
-.servicios-card-conteiner:nth-child(even){
+.servicios-card-container:nth-child(even){
     background-color: bisque;
     flex-direction: column;
 }
 
-.servicios-card-conteiner:nth-child(even){
+.servicios-card-container:nth-child(even){
   background-color: burlywood;
 }
 
-.servicios-card-conteiner:hover img{
+.servicios-card-container:hover img{
   filter: blur(0);
   width: 400px;
   height: 250px;
@@ -361,8 +332,8 @@ h1 {
 }
 
 .box {
-  width: 280px;
-  height: 250px;
+  width: 300px;
+  height: 300px;
   font-weight: bold;
   display: flex;
   align-items: center;
@@ -412,7 +383,7 @@ h1 {
 }
 
 .box:hover{
-  background-color: rgb(236, 117, 117);
+  background-color: rgb(21, 141, 71);
   box-shadow: 3px 3px 13px 5px #11111129;
 }
 
@@ -453,7 +424,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(63, 93, 123);
+  background-color: rgba(0, 0, 0, 0.685);
   color: #FFFFFF;
   padding: 8px;
 }
@@ -477,4 +448,178 @@ footer {
 
 .twitter{
   width: 35px;
+}
+
+.wsp {
+  width: 55px;
+  border-radius: 70%;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+}
+
+.facebook,
+.instagram,
+.twitter,
+.wsp {
+  margin: 0 10px;
+}
+
+/*Media Query Index*/
+
+@media (max-width: 1024px) {
+  .index-circles-container {
+    width: 120px;
+    height: 120px;
+    font-size: 16px;
+    padding: 15px;
+    margin-right: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .index-contain {
+    padding: 20px;
+  }
+
+  .index-circles-container {
+    width: 100px;
+    height: 100px;
+    font-size: 14px;
+    padding: 10px;
+    margin-right: 10px;
+  }
+}
+
+@media (max-width: 380px) {
+  .index-circles-container {
+    width: 80px;
+    height: 80px;
+    font-size: 12px;
+    padding: 8px;
+    margin-right: 5px;
+  }
+}
+
+/* Media Query Contacto */
+
+@media (max-width: 1024px) {
+  .contact-info {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 768px) {
+  .contact {
+    text-align: center;
+  }
+
+  .contact h2 {
+    padding: 10px;
+  }
+
+  .contact-ubicacion {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 15px;
+  }
+
+  .contact-info {
+    display: flex;
+    flex-direction: column; 
+    margin-top: 20px;
+  }
+
+  .contact-info div {
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+
+  .contact-ubicacion iframe {
+    width: 100%; 
+    height: 300px; 
+  }
+}
+
+@media (max-width: 380px) {
+  .contact h2 {
+    font-size: 24px;
+  }
+
+  .contact-info {
+    flex-direction: column;
+  }
+
+  .contact-info div {
+    margin-bottom: 10px;
+    padding: 5px;
+  }
+
+  .contact-ubicacion {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .contact-ubicacion h3 {
+    font-size: 18px;
+  }
+
+  .contact-ubicacion iframe {
+    width: 100%;
+    height: 300px;
+  }
+}
+
+@media (max-width: 1024px) {
+
+  .facebook,
+  .instagram,
+  .twitter {
+    bottom: 10px;
+    right: 10px;
+    padding-right: 5px;
+  }
+
+  .facebook {
+    width: 40px;
+    margin-left: 20px;
+  }
+
+  .instagram {
+    width: 55px;
+  }
+
+  .twitter {
+    width: 35px;
+  }
+}
+
+@media (max-width: 768px) {
+  footer {
+    padding: 10px;
+  }
+
+  .facebook,
+  .instagram,
+  .twitter,
+  .wsp {
+    width: 30px;
+    margin: 0 5px; 
+  }
+
+  .facebook{
+    width: 30px;
+  }
+}
+
+@media (max-width: 380px) {
+  .facebook,
+  .instagram,
+  .twitter,
+  .wsp {
+    width: 30px;
+    margin: 0 5px; 
+  }
 }
