--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,17 @@
+/* Variables */
+/* Reset */
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@600&family=Kanit:wght@300;400&family=Poppins:ital,wght@0,400;1,300&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 /* Fuente Web de texto - importada de google*/
-
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@600&family=Kanit:wght@300;400&family=Poppins:ital,wght@0,400;1,300&display=swap');
-/*body*/
-
+/* En todas las Layouts */
 body {
-  font-family: 'Segoe UI', 'Tahoma', 'Geneva', 'Verdana', 'sans-serif';
+  font-family: "Segoe UI", "Tahoma", "Geneva", "Verdana", "sans-serif";
+  background-color: #BDC3C7;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -17,31 +24,27 @@ main {
 h1 {
   text-align: center;
   font-size: 30px;
-  font-family: 'Fira Sans', serif;
+  font-family: "Fira Sans", serif;
   font-weight: bolder;
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
-h2{
-  font-family: 'Poppins';
+h2 {
+  font-family: "Poppins";
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+p::selection {
+  background-color: rgba(236, 234, 193, 0.5960784314);
 }
 
-p::selection{
-  background-color: #c1ecc1;
-}
-
-/*nav*/
-
+/* Header - Navbar */
 .nav-link {
   color: #FFFFFF;
   font-weight: bolder;
+}
+.nav-link:hover {
+  color: #ffcc00;
 }
 
 .navbar-toggler {
@@ -53,373 +56,7 @@ p::selection{
   transform: translateY(-50%);
 }
 
-.nav-link:hover {
-  color: #ffcc00;
-}
-
-/*index*/
-
-.body-index{
-  background-color: #BDC3C7;
-}
-
-.index {
-  text-align: center;
-}
-
-.index-contain {
-  text-align: center;
-  padding: 30px;
-}
-
-.index-contain p {
-  font-weight: bold;
-  padding: 5px;
-}
-
-.index-circles {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.top-circles,
-.bottom-circles {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-
-.index-circles-container {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  color: black; 
-  font-size: 18px;
-  padding: 20px;
-  margin: 5px;
-  margin-right: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-weight: bold;
-  box-sizing: border-box;
-  flex-direction: column;
-  overflow: hidden;
-  background-color: #D4AF37;
-  border: 2px solid #B7950B;
-}
-
-.index-circles-container span {
-  white-space: nowrap;
-}
-
-/*Sobre nosotros*/
-
-.body-about {
-  background-color: #84a8c7;
-}
-
-.about-container {
-  margin: 20px;
-}
-
-.about-card {
-  display: flex;
-}
-
-.about-card img {
-  width: 45%;
-  height: 100%;
-  object-fit: cover;
-  padding: 20px;
-}
-
-.about-card-container {
-  padding: 15px;
-  display: flex;
-  gap: 10px;
-  align-items: center;
-  font-size: 18px;
-  text-align: justify;
-  
-}
-
-.pilares-container {
-  padding: 5px;
-}
-
-.pilares,
-.pilares-container h2,
-.pilares-card h3 {
-  text-align: center;
-}
-
-.pilares-container h2 {
-  padding: 5px;
-}
-
-.pilares-card h3 {
-  margin: 10px;
-}
-
-.pilares-card {
-  display: flex;
-  flex-wrap: nowrap;
-  gap: 20px;
-  justify-content: space-between;
-  align-items: stretch;
-  margin: 20px;
-}
-
-.pilares-card-container {
-  display: flex;
-  flex-direction: column; 
-  width: 250px;
-  height: 300px;
-  border: 2px solid rgb(235, 244, 185);
-  border-radius: 5px;
-  background-color: #BDC3C7;
-  padding: 10px 25px 15px 25px;
-  margin: 10px;
-  text-align: justify;
-  align-items: center; 
-}
-
-.pilares-card-container p {
-  margin: auto;
-}
-
-.pilares-card-container:hover{
-  background-color: #b3bdec;
-}
-
-/*Servicios*/
-
-.body-servicios{
-  background: rgb(187, 229, 235);
-}
-.servicios {  
-  text-align: center;
-}
-
-.servicios-container{
-  display: flex;
-  margin: 10px;
-}
-
-.servicios-container h2{
-  margin-top: 10px;
-}
-
-.servicios-container p {
-  padding: 10px;
-  text-align: left;
-}
-
-.servicios-container-span{
-  width: 100%;
-  background-color: #f0f0f0; 
-  padding: 20px; 
-}
-
-.servicios-container-span p{
-  display: block; 
-  text-align: center; 
-  font-weight: bold;
-  font-size: 18px; 
-}
-
-.servicios-card{
-  display: flex;
-  flex-wrap: wrap;
-  gap: 15px;
-  justify-content: space-evenly;
-}
-
-.servicios-card-container {
-  width: 400px;
-  height: 480px;
-  border: 2px solid rgb(235, 244, 185);
-  border-radius: 5px;
-  background-color: #BDC3C7;
-  padding: 20px;
-  margin: 20px;
-  text-align: justify;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center; 
-}
-
-.servicios-card-container h2 {
-  padding: 5px;
-  text-align: left;
-  margin-bottom: 5px;
-}
-
-.servicios-card-container img {
-  width: 340px;
-  height: 200px;
-  padding: 20px; 
-  object-fit: cover;
-  overflow: hidden;
-}
-
-.servicios-card-container p {
-  line-height: 1.5;
-  font-size: 16px; 
-  font-weight: bold;
-}
-
-.servicios-card-container:hover{
-  background-color: #84c6c7;
-  box-shadow: 3px 3px 13px 5px #84a8c7;
-}
-
-.servicios-card-container:nth-child(even){
-    background-color: bisque;
-    flex-direction: column;
-}
-
-.servicios-card-container:nth-child(even){
-  background-color: burlywood;
-}
-
-.servicios-card-container:hover img{
-  filter: blur(0);
-  width: 400px;
-  height: 250px;
-}
-
-/*Promociones*/
-
-.body-promociones {
-  background-color: rgb(208, 245, 232);
-}
-
-.auto{
-  display: block;
-  margin: auto;
-  max-width: 100%;
-  height: auto;
-}
-
-.promocion-1 {
-  grid-area: promocion-1;
-}
-
-.promocion-2 {
-  grid-area: promocion-2;
-}
-
-.promocion-3 {
-  grid-area: promocion-3;
-}
-
-.promocion-4 {
-  grid-area: promocion-4;
-}
-
-.promocion-5 {
-  grid-area: promocion-5;
-}
-
-.promocion-6 {
-  grid-area: promocion-6;
-}
-
-.box {
-  width: 300px;
-  height: 300px;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  border-radius: 15px;
-  border: 1px solid white;
-}
-
-.box div {
-  z-index: 3;
-  border-radius: 14px;
-  background-color: #111111cd;
-  color: white;
-  width: 100%;
-  height: 100%;
-  padding: 10px;
-  display: grid;
-  opacity: 0.5;
-}
-
-.grid {
-  padding: 15px;
-  display: grid;
-  grid-template-rows: repeat(2, 300px);
-  gap: 15px;
-  align-items: center;
-  justify-items: center;
-  grid-template-areas:
-    'promocion-1 promocion-2 promocion-3'
-    'promocion-4 promocion-5 promocion-6';
-}
-
-.box div h2{
-  text-align: center;
-}
-
-.box img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  filter: contrast(0.5);
-  position: absolute;
-  border-radius: 8px;
-  border: 1px solid rgba(255, 255, 255, 0.599);
-  box-shadow: 2px 2px 6px 2px rgba(255, 235, 205, 0.193);
-}
-
-.box:hover{
-  background-color: rgb(21, 141, 71);
-  box-shadow: 3px 3px 13px 5px #11111129;
-}
-
-/*Contacto*/
-
-.body-contact{
-  background: rgb(191, 198, 222);
-}
-
-.contact {
-  text-align: center; 
-}
-
-.contact h2 {
-  padding: 10px;
-}
-
-.contact-ubicacion {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 15px;
-}
-
-.contact-info {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 20px;
-}
-
-.contact-info div {
-  text-align: center;
-}
-
 /*footer*/
-
 footer {
   display: flex;
   align-items: center;
@@ -428,45 +65,345 @@ footer {
   color: #FFFFFF;
   padding: 8px;
 }
-
-.facebook,
-.instagram,
-.twitter{
+footer div a .facebook,
+footer div a .instagram,
+footer div a .twitter {
   bottom: 10px;
   right: 10px;
   padding-right: 5px;
 }
-
-.facebook{
+footer div a .facebook {
   width: 40px;
-  margin-left: 20px;  
+  margin-left: 20px;
 }
-
-.instagram{
+footer div a .instagram {
   width: 55px;
 }
-
-.twitter{
+footer div a .twitter {
   width: 35px;
 }
+footer .facebook,
+footer .instagram,
+footer .twitter,
+footer .wsp {
+  margin: 0 10px;
+}
 
-.wsp {
+/* Index */
+main .index {
+  text-align: center;
+}
+main .carousel {
+  text-align: center;
+}
+main .index-contain {
+  text-align: center;
+  padding: 30px;
+}
+main .index-contain p {
+  font-weight: bold;
+  padding: 5px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+main .index-circles {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+main .top-circles,
+main .bottom-circles {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+main .index-circles-container {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  color: black;
+  font-size: 18px;
+  padding: 20px;
+  margin: 5px;
+  margin-right: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-weight: bold;
+  box-sizing: border-box;
+  flex-direction: column;
+  overflow: hidden;
+  background-color: #D4AF37;
+  border: 2px solid #B7950B;
+}
+main .index-circles-container__span {
+  white-space: nowrap;
+}
+main .wsp {
   width: 55px;
   border-radius: 70%;
   position: fixed;
   bottom: 10px;
   right: 10px;
+  transition: 1.5s;
+  filter: brightness(1);
+}
+main .wsp:hover {
+  filter: blur(0);
+  width: 65px;
+  border-radius: 70%;
 }
 
-.facebook,
-.instagram,
-.twitter,
-.wsp {
-  margin: 0 10px;
+/*Sobre nosotros*/
+main .about-container {
+  margin: 20px;
+}
+main .about-card {
+  display: flex;
+}
+main .about-card img {
+  width: 45%;
+  height: 100%;
+  object-fit: cover;
+  padding: 20px;
+}
+main .about-card-container {
+  padding: 15px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  font-size: 18px;
+  text-align: justify;
+}
+main .pilares {
+  text-align: center;
+}
+main .pilares-container {
+  padding: 5px;
+}
+main .pilares-container h2 {
+  text-align: center;
+  padding: 5px;
+}
+main .pilares-card {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
+  justify-content: space-between;
+  align-items: stretch;
+  margin: 20px 30px 20px 30px;
+}
+main .pilares-card h3 {
+  margin: 10px;
+  text-align: center;
+}
+main .pilares-card-container {
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+  height: 300px;
+  border: 2px solid rgb(235, 244, 185);
+  border-radius: 5px;
+  background-color: #BDC3C7;
+  padding: 10px 25px 15px 25px;
+  margin: 10px;
+  text-align: justify;
+  align-items: center;
+  transition: 1.5s;
+}
+main .pilares-card-container p {
+  margin: auto;
+}
+main .pilares-card-container:hover {
+  background-color: #b3bdec;
+  box-shadow: 3px 3px 13px 5px rgba(17, 17, 17, 0.1607843137);
+}
+
+/* Servicios*/
+main .servicios {
+  text-align: center;
+}
+main .servicios-container {
+  display: flex;
+  margin: 10px;
+}
+main .servicios-container h2 {
+  margin-top: 10px;
+}
+main .servicios-container p {
+  padding: 10px;
+  text-align: left;
+}
+main .servicios-container-span {
+  width: 100%;
+  background-color: #f0f0f0;
+  padding: 20px;
+}
+main .servicios-container-span p {
+  display: block;
+  text-align: center;
+  font-weight: bold;
+  font-size: 18px;
+}
+main .servicios-card {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  justify-content: space-evenly;
+}
+main .servicios-card-container {
+  width: 400px;
+  height: 550px;
+  border: 2px solid rgb(235, 244, 185);
+  border-radius: 5px;
+  background-color: #BDC3C7;
+  padding: 20px;
+  margin: 20px;
+  text-align: justify;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition: 1.5s;
+}
+main .servicios-card-container img {
+  width: 340px;
+  height: 200px;
+  padding: 20px;
+  object-fit: cover;
+  overflow: hidden;
+  transition: 1.5s;
+  filter: brightness(0.8);
+}
+main .servicios-card-container h2 {
+  padding: 5px;
+  text-align: left;
+  margin-bottom: 5px;
+}
+main .servicios-card-container p {
+  line-height: 1.5;
+  font-size: 16px;
+  font-weight: bold;
+}
+main .servicios-card-container:hover {
+  background-color: #b3bdec;
+  box-shadow: 3px 3px 13px 5px rgba(17, 17, 17, 0.1607843137);
+}
+main .servicios-card-container:nth-child(even) {
+  background-color: rgb(191, 198, 222);
+  flex-direction: column;
+}
+main .servicios-card-container:hover img {
+  filter: blur(0);
+  width: 400px;
+  height: 250px;
+}
+
+/* Promociones */
+main .auto {
+  display: block;
+  margin: auto;
+  max-width: 100%;
+  height: auto;
+}
+main .grid {
+  padding: 20px;
+  display: grid;
+  grid-template-rows: repeat(2, 300px);
+  gap: 15px;
+  align-items: center;
+  justify-items: center;
+  grid-template-areas: "promocion-1 promocion-2 promocion-3" "promocion-4 promocion-5 promocion-6";
+}
+main .grid .box {
+  width: 300px;
+  height: 310px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  border-radius: 15px;
+  border: 1px solid white;
+  transition: 1.5s;
+}
+main .grid .box__promocion-1 {
+  grid-area: promocion-1;
+}
+main .grid .box__promocion-2 {
+  grid-area: promocion-2;
+}
+main .grid .box__promocion-3 {
+  grid-area: promocion-3;
+}
+main .grid .box__promocion-4 {
+  grid-area: promocion-4;
+}
+main .grid .box__promocion-5 {
+  grid-area: promocion-5;
+}
+main .grid .box__promocion-6 {
+  grid-area: promocion-6;
+}
+main .grid .box div {
+  z-index: 3;
+  border-radius: 14px;
+  background-color: rgba(17, 17, 17, 0.8039215686);
+  color: white;
+  font-weight: bold;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  display: grid;
+  opacity: 0.5;
+}
+main .grid .box div h2 {
+  text-align: center;
+}
+main .grid .box img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  position: absolute;
+  display: block;
+  opacity: 0.8;
+  border-radius: 8px;
+  border: 1px solid rgb(235, 244, 185);
+  box-shadow: 2px 2px 6px 2px rgba(255, 235, 205, 0.193);
+  transition: 1.5s;
+  filter: brightness(0.7);
+}
+main .grid .box:hover {
+  background-color: #b3bdec;
+  box-shadow: 3px 3px 13px 5px rgba(17, 17, 17, 0.1607843137);
+}
+
+/* Contacto */
+main .contact {
+  text-align: center;
+}
+main h2 {
+  padding: 10px;
+}
+main h2 .contact-ubicacion {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 15px;
+}
+main .contact-info {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+main .contact-info div {
+  text-align: center;
 }
 
 /*Media Query Index*/
-
 @media (max-width: 1024px) {
   .index-circles-container {
     width: 120px;
@@ -476,12 +413,10 @@ footer {
     margin-right: 20px;
   }
 }
-
 @media (max-width: 768px) {
   .index-contain {
     padding: 20px;
   }
-
   .index-circles-container {
     width: 100px;
     height: 100px;
@@ -490,7 +425,6 @@ footer {
     margin-right: 10px;
   }
 }
-
 @media (max-width: 380px) {
   .index-circles-container {
     width: 80px;
@@ -500,80 +434,63 @@ footer {
     margin-right: 5px;
   }
 }
-
 /* Media Query Contacto */
-
 @media (max-width: 1024px) {
   .contact-info {
     flex-direction: column;
   }
 }
-
 @media (max-width: 768px) {
   .contact {
     text-align: center;
   }
-
   .contact h2 {
     padding: 10px;
   }
-
   .contact-ubicacion {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 15px;
   }
-
   .contact-info {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     margin-top: 20px;
   }
-
   .contact-info div {
     text-align: center;
     margin-bottom: 10px;
   }
-
-
-  .contact-ubicacion iframe {
-    width: 100%; 
-    height: 300px; 
-  }
-}
-
-@media (max-width: 380px) {
-  .contact h2 {
-    font-size: 24px;
-  }
-
-  .contact-info {
-    flex-direction: column;
-  }
-
-  .contact-info div {
-    margin-bottom: 10px;
-    padding: 5px;
-  }
-
-  .contact-ubicacion {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .contact-ubicacion h3 {
-    font-size: 18px;
-  }
-
   .contact-ubicacion iframe {
     width: 100%;
     height: 300px;
   }
 }
-
+@media (max-width: 380px) {
+  .contact h2 {
+    font-size: 24px;
+  }
+  .contact-info {
+    flex-direction: column;
+  }
+  .contact-info div {
+    margin-bottom: 10px;
+    padding: 5px;
+  }
+  .contact-ubicacion {
+    flex-direction: column;
+    align-items: center;
+  }
+  .contact-ubicacion h3 {
+    font-size: 18px;
+  }
+  .contact-ubicacion iframe {
+    width: 100%;
+    height: 300px;
+  }
+}
 @media (max-width: 1024px) {
-
   .facebook,
   .instagram,
   .twitter {
@@ -581,45 +498,40 @@ footer {
     right: 10px;
     padding-right: 5px;
   }
-
   .facebook {
     width: 40px;
     margin-left: 20px;
   }
-
   .instagram {
     width: 55px;
   }
-
   .twitter {
     width: 35px;
   }
 }
-
 @media (max-width: 768px) {
   footer {
     padding: 10px;
   }
-
   .facebook,
   .instagram,
   .twitter,
   .wsp {
     width: 30px;
-    margin: 0 5px; 
+    margin: 0 5px;
   }
-
-  .facebook{
+  .facebook {
     width: 30px;
   }
 }
-
 @media (max-width: 380px) {
   .facebook,
   .instagram,
   .twitter,
   .wsp {
     width: 30px;
-    margin: 0 5px; 
+    margin: 0 5px;
   }
 }
+
+/*# sourceMappingURL=style.css.map */
