--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -7,3 +7,11 @@ $borderColor: rgb(235, 244, 185);
 $boxColor:#11111129;
 
 $bodyFont: 'Segoe UI', 'Tahoma', 'Geneva', 'Verdana', 'sans-serif';
+
+$theme: light;
+
+$colores: (
+    claro: rgba(96, 146, 216, 0.823),
+    grisceleste: rgba(102, 156, 175, 0.822),
+);
+
