--- a/scss/base/_utils.scss
+++ b/scss/base/_utils.scss
@@ -1,2 +1,17 @@
 /* utils */
 
+@each $key, $value in $colores {
+    .btn-#{$key} {
+        padding: 10px;
+        cursor: pointer;
+        background-color: $value;
+        color:black;
+        border: 2px solid transparent;
+
+        &:hover {
+            background-color: darken($value, 20%);
+            transform: scale(1.1);
+            font-weight: bold;
+        }
+    }      
+}
