--- a/scss/layout/_servicios.scss
+++ b/scss/layout/_servicios.scss
@@ -24,6 +24,7 @@ main {
         width: 100%;
         background-color: #f0f0f0; 
         padding: 20px; 
+        animation-duration: 3s; 
 
         p{
             display: block; 
