--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -5,6 +5,7 @@ $secondColor:rgb(191, 198, 222);
 $ligthcolor:#b3bdec;
 $borderColor: rgb(235, 244, 185);
 $boxColor:#11111129;
+$colordeco:#ffcc00;
 
 $bodyFont: 'Segoe UI', 'Tahoma', 'Geneva', 'Verdana', 'sans-serif';
 
