--- a/scss/base/_utils.scss
+++ b/scss/base/_utils.scss
@@ -15,3 +15,19 @@
         }
     }      
 }
+
+@mixin flex{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@mixin posicion($justify, $align) {
+    justify-content: $justify;
+    align-items: $align;
+}
+
+@mixin tam ($ancho, $largo) {
+    width: $ancho;
+    height: $largo;
+}
