--- a/scss/layout/_contacto.scss
+++ b/scss/layout/_contacto.scss
@@ -10,9 +10,7 @@ main {
         padding: 10px;
 
         .contact-ubicacion {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            @include flex ();
             margin: 15px;
         }
     }
