--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -23,9 +23,7 @@ main {
     }
 
     .index-circles {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        @include flex ();
         margin-top: 20px;
         margin-bottom: 20px;
     }
@@ -38,21 +36,18 @@ main {
     } 
 
     .index-circles-container {
-        width: 150px;
-        height: 150px;
+        @include flex ();
+        @include tam (150px, 150px);
         border-radius: 50%;
         color: black; 
         font-size: 18px;
         padding: 20px;
         margin: 5px;
         margin-right: 30px;
-        display: flex;
-        align-items: center;
         justify-content: center;
         text-align: center;
         font-weight: bold;
         box-sizing: border-box;
-        flex-direction: column;
         overflow: hidden;
         background-color: #D4AF37;
         border: 2px solid #B7950B;
@@ -65,7 +60,7 @@ main {
 
         &:hover {
             transform: scale(1.1);
-            background-color: #ffcc00;
+            background-color: $colordeco;
         }
     }
 
