--- a/scss/layout/_promociones.scss
+++ b/scss/layout/_promociones.scss
@@ -13,21 +13,18 @@ main {
     .grid {
         padding: 20px;
         display: grid;
-        grid-template-rows: repeat(2, 300px);
+        grid-template-rows: repeat(2, 1fr);
         gap: 15px;
-        align-items: center;
-        justify-items: center;
+        @include posicion (center, center);
         grid-template-areas:
             'promocion-1 promocion-2 promocion-3'
             'promocion-4 promocion-5 promocion-6';
 
             .box {
-                width: 300px;
-                height: 310px;
+                @include tam (300px, 310px);
                 font-weight: bold;
                 display: flex;
-                align-items: center;
-                justify-content: center;
+                @include posicion (center, center);
                 position: relative;
                 border-radius: 15px;
                 border: 1px solid white;
@@ -39,8 +36,7 @@ main {
                     background-color: #111111cd;
                     color: white;
                     font-weight: bold;
-                    width: 100%;
-                    height: 100%;
+                    @include tam (100%, 100%);
                     padding: 10px;
                     display: grid;
                     opacity: 0.5;
@@ -79,11 +75,11 @@ main {
                     background-color: $ligthcolor;
                     box-shadow: 3px 3px 13px 5px $boxColor;
                 }
+                
         }
 
         img {
-            width: 100%;
-            height: auto;
+            @include tam (100%, auto);
             object-fit: cover;
             position: absolute;
             display: block;
