--- a/css/style.css
+++ b/css/style.css
@@ -470,22 +470,19 @@ main .contact-info div {
   }
 }
 @media (max-width: 768px) {
-  .index-contain {
-    padding: 20px;
-  }
   .index-circles-container {
-    width: 100px;
-    height: 100px;
-    font-size: 14px;
+    width: 115px !important;
+    height: 115px !important;
+    font-size: 14px !important;
     padding: 10px;
     margin-right: 10px;
   }
 }
 @media (max-width: 380px) {
   .index-circles-container {
-    width: 80px;
-    height: 80px;
-    font-size: 12px;
+    width: 95px !important;
+    height: 95px !important;
+    font-size: 12px !important;
     padding: 8px;
     margin-right: 5px;
   }
