--- a/scss/layout/_mediaqueries.scss
+++ b/scss/layout/_mediaqueries.scss
@@ -5,8 +5,7 @@
 @media (max-width: 1024px) {
     
     .index-circles-container {
-        width: 120px;
-        height: 120px;
+        @include tam (120px,120px); 
         font-size: 16px;
         padding: 15px;
         margin-right: 20px;
@@ -15,14 +14,9 @@
 
 @media (max-width: 768px) {
 
-    .index-contain {
-        padding: 20px;
-    }
-
     .index-circles-container {
-        width: 100px;
-        height: 100px;
-        font-size: 14px;
+        @include tam (115px !important,115px !important); 
+        font-size: 14px !important;
         padding: 10px;
         margin-right: 10px;
     }
@@ -31,9 +25,8 @@
 @media (max-width: 380px) {
 
     .index-circles-container {
-        width: 80px;
-        height: 80px;
-        font-size: 12px;
+        @include tam (95px !important,95px !important); 
+        font-size: 12px !important;
         padding: 8px;
         margin-right: 5px;
     }
@@ -84,8 +77,7 @@
 
         .pilares-card {
             gap: 0px;
-            justify-content: center;
-            align-items: center;
+            @include posicion(center, center);
             padding: 10px 10px 10px 20px;
         }
     }
@@ -111,8 +103,7 @@
 
         .pilares-card {
             gap: 0px;
-            justify-content: center;
-            align-items: center;
+            @include posicion (center,center);
             padding: 10px 10px 10px 20px;
         }
     }
@@ -203,9 +194,7 @@
     }
 
     .contact-ubicacion {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        @include flex ();
         margin: 15px;
     }
 
